--- a/src/main/resources/assets/nusiam/lang/en_us.json
+++ b/src/main/resources/assets/nusiam/lang/en_us.json
@@ -1,4 +1,5 @@
 {
   "item.nusiam.nusiam": "Nusiam",
-  "item.nusiam.raw_nusiam": "Raw Nusiam"
+  "item.nusiam.raw_nusiam": "Raw Nusiam",
+  "item.nusiam.nusiam_ore": "Nusiam Ore"
 }
